--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Visual Analytics"
+title: "Bi Lian's Visual Analytics Site"
 description: |
-  Welcome to the website. I hope you enjoy it!
+  Welcome!
 site: distill::distill_website
 ---
 
@@ -12,4 +12,11 @@ knitr::opts_chunk$set(echo = FALSE)
 # https://rstudio.github.io/distill/website.html
 
 ```
+
+This website is a collection of all the exercises and assignments that are required under **ISSS608 Visual Analytics and Applications**.
+
+If you have any feedback or need any clarification, you may contact Bi Lian at bilian.ang.2021@mitb.smu.edu.sg. 
+
+I hope you enjoy the website. Stay Safe!
+
 
